--- a/index.html
+++ b/index.html
@@ -2,60 +2,48 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon.png" />
+    <link rel="icon" type="image/png" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="google-site-verification"
-      content="ZYNfZwMUiNwSMF3EMvY85bid2BVvB12uMMRfUNWw75A"
-    />
-    <meta
-      name="keywords"
-      content="Eki, Eki Zulfar,Eki Zulfar Rachman, siapa Eki, Eki adalah , Siapa Eki Zulfar , ekizr"
+    <meta name="google-site-verification" content="kIhl59vjxuE5mkYJza22OF9ztwMy3ia3dxTBZKEH4V4" />
+    <meta 
+      name="keywords" 
+      content="Altamash Ahmad, Full Stack Developer, MERN Developer, Java Developer, Web Developer, Portfolio, Projects" 
     />
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta
-      name="title"
-      content="Eki Zulfar Rachman - Profil Pengembang Front-End Web"
+    <meta 
+      name="title" 
+      content="Altamash Ahmad - Full Stack Web Developer Portfolio" 
     />
-    <meta
-      name="description"
-      content="Selamat datang di website saya! Saya adalah Eki Zulfar Rachman, atau panggil saja saya 'EKI.' Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini"
+    <meta 
+      name="description" 
+      content="Welcome to my portfolio! I'm Altamash Ahmad, a Full Stack Web Developer specializing in MERN stack and Java. Explore my projects and experience here." 
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://eki.my.id/" />
-    <meta
-      property="og:title"
-      content="Eki Zulfar Rachman - Profil Pengembang Front-End Web"
+    <meta property="og:url" content="https://portfolio-v2-neon-xi.vercel.app/" />
+    <meta 
+      property="og:title" 
+      content="Altamash Ahmad - Full Stack Web Developer Portfolio" 
     />
-    <meta
-      property="og:description"
-      content="Selamat datang di website saya! Saya adalah Eki Zulfar Rachman, atau panggil saja saya 'EKI.' Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini"
+    <meta 
+      property="og:description" 
+      content="Welcome to my portfolio! I'm Altamash Ahmad, a Full Stack Web Developer specializing in MERN stack and Java. Explore my projects and experience here." 
     />
-    <meta property="og:image" content="https://eki.my.id/Meta.png" />
+    <meta property="og:image" content="https://res.cloudinary.com/du7xgosqr/image/upload/v1740244757/Portfolio/Website%20Thumbnail/il7a8ymadmw7abfrc3wi.png" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://eki.my.id/" />
-    <meta
-      property="twitter:title"
-      content="Eki Zulfar Rachman - Profil Pengembang Front-End Web"
-    />
-    <meta
-      property="twitter:description"
-      content="Selamat datang di website saya! Saya adalah Eki Zulfar Rachman, atau panggil saja saya 'EKI.' Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini"
-    />
-    <meta property="twitter:image" content="https://eki.my.id/Meta.png" />
-    <meta name="theme-color" content="rgb(3,0,20)" />
-    <meta name="msapplication-navbutton-color" content="rgb(3,0,20)" />
+    <!-- Social Links -->
+    <meta property="og:site_name" content="Altamash Ahmad Portfolio" />
+    <meta property="og:see_also" content="https://www.instagram.com/altamash_ahmad.02" />
+    <meta property="og:see_also" content="https://www.linkedin.com/in/altamashahmad02" />
+    <meta property="og:see_also" content="https://github.com/AhmadAltamash" />
+    
+    <meta name="theme-color" content="#030014" />
+    <meta name="msapplication-navbutton-color" content="#030014" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta
-      name="apple-mobile-web-app-status-bar-style"
-      content="black-translucent"
-    />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-    <title>Altamash Ahmad - Portfolio Full Stack Web</title>
+    <title>Altamash Ahmad - Full Stack Web Developer Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
