--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/png" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="kIhl59vjxuE5mkYJza22OF9ztwMy3ia3dxTBZKEH4V4" />
+
     <meta 
       name="keywords" 
       content="Altamash Ahmad, Full Stack Developer, MERN Developer, Java Developer, Web Developer, Portfolio, Projects" 
@@ -19,7 +20,6 @@
       content="Welcome to my portfolio! I'm Altamash Ahmad, a Full Stack Web Developer specializing in MERN stack and Java. Explore my projects and experience here." 
     />
 
-    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://portfolio-v2-neon-xi.vercel.app/" />
     <meta 
@@ -28,15 +28,17 @@
     />
     <meta 
       property="og:description" 
-      content="Welcome to my portfolio! I'm Altamash Ahmad, a Full Stack Web Developer specializing in MERN stack and Java. Explore my projects and experience here." 
+      content="Explore my projects, skills, and experience in full-stack development using MERN stack and Java. See my work and connect with me!" 
     />
     <meta property="og:image" content="https://res.cloudinary.com/du7xgosqr/image/upload/v1740244757/Portfolio/Website%20Thumbnail/il7a8ymadmw7abfrc3wi.png" />
 
-    <!-- Social Links -->
     <meta property="og:site_name" content="Altamash Ahmad Portfolio" />
     <meta property="og:see_also" content="https://www.instagram.com/altamash_ahmad.02" />
     <meta property="og:see_also" content="https://www.linkedin.com/in/altamashahmad02" />
     <meta property="og:see_also" content="https://github.com/AhmadAltamash" />
+    
+    <meta name="robots" content="index, follow" />
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
     
     <meta name="theme-color" content="#030014" />
     <meta name="msapplication-navbutton-color" content="#030014" />
